# miniV1

./: .gitignore  README.md  pyproject.toml  run.py
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  RETROSPECTIVE.md  ROADMAP.md  STATE.md  config.json  v1.1-MILESTONE-AUDIT.md
.planning/milestones/: v1.0-REQUIREMENTS.md  v1.0-ROADMAP.md  v1.1-ADR-0007.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
docs/plans/: 2026-03-12-auth-oauth-design.md  2026-03-12-auth-oauth.md  2026-03-12-auth-oauth.md.tasks.json
minilegion/: __init__.py  __main__.py
minilegion/adapters/: __init__.py  anthropic_adapter.py  base.py  copilot_adapter.py  factory.py  gemini_adapter.py  ollama_adapter.py  openai_adapter.py  (+1 more)
tests/: conftest.py  test_adapter_base.py  test_adapters.py  test_approval.py  test_approve_review.py  test_cli.py  test_cli_archive.py  test_cli_auth.py  test_cli_brief_research.py  test_cli_design.py  test_cli_execute.py  test_cli_plan.py  test_cli_pr.py  test_cli_review.py  test_cli_rollback_doctor.py  test_cli_validate_advance.py  test_coherence.py  test_config.py  test_config_commands.py  test_context_assembler.py  test_context_scanner.py  test_copilot_adapter.py  test_diff.py  test_evidence.py  test_exceptions.py  test_file_io.py  test_fixups.py  test_git_integration.py  test_history.py  test_init.py  test_json_schemas.py  test_openai_adapter.py  test_patcher.py  test_preflight.py  test_prompt_loader.py  test_provider_health.py  test_registry.py  test_renderer.py  test_retry.py  test_schemas.py  (+3 more)
(+183 files in other folders)
