[project]
name = "minilegion"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "typer>=0.24.0",
    "pydantic>=2.12.0",
    "openai>=1.0",
]

[project.scripts]
minilegion = "minilegion.cli:app"

[project.optional-dependencies]
anthropic = ["anthropic>=0.40"]
gemini = ["google-genai>=1.0"]
all-providers = ["anthropic>=0.40", "google-genai>=1.0"]
dev = ["pytest>=8.0"]

[tool.setuptools.packages.find]
include = ["minilegion*"]

[tool.setuptools.package-data]
"minilegion.prompts" = ["*.md"]

[tool.pytest.ini_options]
testpaths = ["tests"]
